Added images and finished recepes lists

--- a/Recepies/pizza.html
+++ b/Recepies/pizza.html
@@ -7,12 +7,16 @@
 </head>
 <body>
     <h1>Pizza recepes</h1>
-    <a href="../index.html">Home</a>
+    <img src="../images/pizza-de-pepperoni-caseira-portal-minha-receita.jpg" alt="Pizza image" height="300" width="300">
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Dough – Stretch into a thin circle on a floured surface.</li>
+        <li>Tomato sauce – Spread evenly over the dough, leaving a border.</li>
+        <li>Mozzarella – Tear and scatter across the sauce.</li>
+        <li>Pepperoni – Arrange slices evenly on top of the cheese.</li>
     </ul>
+
+
+        <a href="../index.html">Home</a>
+
 </body>
 </html>
